<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayoutBackGroundTopic"
    android:background="@drawable/background_custom">
    <Button
        android:textColor="@drawable/custom_color"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_kich"
        android:id="@+id/buttonTiengAnh"
        android:layout_centerInParent="true"
        android:text="@string/tieng_anh"/>
    <Button
        android:textColor="@drawable/custom_color"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_kich"
        android:id="@+id/buttonTiengViet"
        android:layout_below="@+id/buttonTiengAnh"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/tieng_viet"/>
    <TextView
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/topic"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Nhập tên của bạn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/colorAccent"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edittext_custom"
        />
</RelativeLayout>